Changelog Legend:

[+] = Added
[*] = Changed
[^] = Moved
[=] = No Changes
[x] = Deleted
[!] = Bugs

(06/03/2012) - Version 1.5.8
[!] missing search query from search.php


(06/02/2012) - Version 1.5.6/7
[*] all* language updates
[+] new languages
    - Croatian
	- Serbian (Latin)
[+] featured image support for archive.php
[+] overflow auto for blockquote
[*] improved search.php

(05/26/2012) - Version 1.5.4/5
[+] new languages
    - Bulgarian
	- Norwegian
[*] all* language updates
[+] direct script access disallowed
[*] featured-image.png
[*] screenshot.png
[x] Google Font removed for non-English
    language compatibility
[+] all* "Helvetica Neue", Helvetica, Arial, sans-serif;
[*] search.php text
[*] all* not found arrows
[x] breadcrumbs for search.php
[*] reduced font-size in theme-options.css
[*] more precise responsive grids
[*] style.css maintenance

(05/17/2012) - Version 1.5.3
[+] new languages
    - Malay
    - Catalan
    - Spanish
[*] CSS tutorial link changed to
    https://developer.mozilla.org/en/CSS

(05/13/2012) - Quick Bug Fixes Version 1.5.2
[*] comment counts in comments.php
[*] help-links in /includes/theme-options.php
[+] new .pot generated
[+] new languages
    - Swedish
[*] CSS buttons

(05/10/2012) - Bug Fixes/Maintenance Version 1.5.1
[!] missing textdomain in
    - comments.php
	- home.php (CTA button)
	- /includes/functions.php
	- /includes/theme-options.php
[!] function prefix missmatch in
    - /includes/functions.php
[+] new .pot generated
[*] new German language generated
[+] new languages
    - Portuguese
	- French
	- Italian
[*] screenshot.png

(05/01/2012) - Maintenance Version 1.5.0
[+] missing textdomain for 'powered by' footer.php
[*] featured-image DIV end (comment only) home.php
[+] Instagram and Pinterest icons
[+] custom styles in Theme Options
[+] German translation
[*] theme-options.css

(04/24/2012) - Bug Fixes/Maintenance Version 1.4.8/9
[!] dropdown menu clear background
[!] no breadcrumb chevron on page levels