@@ -9,17 +9,64 @@ if ( !defined('ABSPATH')) exit;
  *
  * @file           version.php
  * @package        WordPress 
- * @subpackage     responsive 
+ * @subpackage     Responsive 
  * @author         Emil Uzelac 
  * @copyright      2003 - 2011 ThemeID
  * @license        license.txt
- * @version        Release: 1.0
+ * @version        Release: 1.1
  * @filesource     wp-content/themes/responsive/includes/version.php
  * @link           N/A
  * @since          available since Release 1.0
  */
 ?>
 <?php
+if ( function_exists('wp_get_theme')) {
+	
+ function responsive_template_data() {
+    echo '<!-- We need this for debugging -->' . "\n";
+    echo '<meta name="template" content="' . get_responsive_template_name() . ' ' . get_responsive_template_version() . '" />' . "\n";
+    if ( is_child_theme() ) {
+        echo '<meta name="theme" content="' . get_responsive_theme_name() . ' ' . get_responsive_theme_version() . '" />' . "\n";
+     }
+ }
+ 
+add_action('wp_head', 'responsive_template_data');
+add_action('wp_head', 'responsive_theme_data');
+
+function get_responsive_theme_name() {
+	$theme = wp_get_theme();
+	return $theme->Name;
+}
+
+function get_responsive_theme_version() {
+	$theme = wp_get_theme();
+	return $theme->Version;	
+}
+
+function get_responsive_template_name() {
+	$theme = wp_get_theme();
+	$parent = $theme->parent();
+	if ( $parent )
+		$theme = $parent;
+	
+	return $theme->Name;
+}
+
+function get_responsive_template_version() {
+	$theme = wp_get_theme();
+	$parent = $theme->parent();
+	if ( $parent )
+		$theme = $parent;
+
+	return $theme->Version;	
+}
+
+} else {
+	
+/**
+ * < 3.4 Backward Compatibility
+ */
+	
 $theme_data = get_theme_data(STYLESHEETPATH . '/style.css');
 define('responsive_current_theme', $theme_name = $theme_data['Name']);
 
@@ -43,6 +90,4 @@ function responsive_theme_data() {
 
         echo '<meta name="theme" content="' . $responsive_theme_name . ' ' . $responsive_theme_version . '" />' . "\n";
     }
-}
-
-add_action('wp_head', 'responsive_theme_data');
+}}
