@@ -15,3 +15,15 @@ jQuery(document).ready(function(){
 // jQuery("#thing-with-videos").fitVids({ customSelector: "iframe[src^='http://example.com'], iframe[src^='http://example.org']"});
 // Selectors are comma separated, just like CSS
 // Note: This will be the quickest way to add your own custom vendor as well as test your player's compatibility with FitVids.
+// Tinynav
+jQuery(function(){
+    // Main Menu
+    jQuery('.menu').tinyNav({
+        active: 'selected', // Set the "active" class
+		header: true
+    });
+    // Subheader Menu (uncomment to use)
+    //jQuery('.sub-header-menu').tinyNav({
+        //active: 'selected', // Set the "active" class
+    //});
+});
