@@ -3,7 +3,7 @@ Theme Name: Responsive
 Theme URI: http://themeid.com/responsive-theme/ 
 Description: Responsive WordPress Theme that features 9 page Templates such as Blog, Blog Summary and Template based layout designs: sidebar/content, sidebar/content half, content/sidebar and content/sidebar half. There is also full width page, sitemap Template as well as landing page for your PPC or any other purposes. Responsive also supports 9 widget areas and best of all this Theme is crafted with fluid proportion-based grid system of our own to adapt the design to the viewing environment. There are also Theme Options to control the content, webmaster tools, logo managament, social icons and 4 navigation menus. Currently translated in German, French, Portuguese, Italian, Swedish, Malay, Catalan, Spanish, Bulgarian, Norwegian, Croatian and Serbian (Latin) language. Everything is backed by our FREE dedicated support forums @ http://themeid.com/forum
 
-Version: 1.5.8
+Version: 1.5.9
 Author: ThemeID 
 Author URI: http://themeid.com
 Tags: white, black, gray, light, custom-menu, custom-header, custom-background, one-column, two-columns, left-sidebar, right-sidebar, flexible-width, theme-options, threaded-comments, full-width-template, sticky-post, translation-ready
@@ -94,11 +94,13 @@ html {
 }
 
 body {
+	-moz-font-smoothing:antialiased;
 	-webkit-font-smoothing:antialiased;
-	background:#efefef url(images/bg.png) repeat;
+	background:#efefef;
 	color:#404040;
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size:14px;
+	font-smoothing:antialiased;
 	line-height:1.5em;
 	text-rendering:optimizeLegibility;
 }
@@ -1526,6 +1528,7 @@ form div {
 	background-image:-ms-linear-gradient(top, #808080, #363636);
 	background-image:-o-linear-gradient(top, #808080, #363636);
 	background-image:linear-gradient(top, #808080, #363636);
+	color:#fff;
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#808080, endColorstr=#363636);
 }
 
@@ -1585,6 +1588,12 @@ form div {
 -------------------------------------------------------------- */
 .ie7 .menu ul {
 	background:url(images/ie7-fix.gif) repeat;
+}
+
+/* =Responsive Menu (Tinynav.js)
+-------------------------------------------------------------- */
+.tinynav { 
+    display:none 
 }
 
 /* =Sub Header Menu
@@ -2262,7 +2271,8 @@ BDO[DIR="rtl"] {
     }
 }
 
-/* =Media Queries
+/* =Responsive Design
+    Media Queries
     If you're working on a Child Theme, make sure that all
 	media queries are included in your style.css
 -------------------------------------------------------------- */
@@ -2298,10 +2308,21 @@ BDO[DIR="rtl"] {
 	    margin:20px 0 0 0;
     }
 	
-    .menu li, .top-menu, .footer-menu li, .sub-header-menu li {
+    .js .menu,
+	.sub-header-menu {
+		display:none;
+	}
+	
+	.top-menu, .footer-menu li {
 	    float:none;
 	    text-align:center;
     }
+	
+	.tinynav { 
+	    display:block;
+		margin:0 auto;
+		width:100%;
+	}
 	
     #footer {
 	    text-align:center;
